--- a/ASSETS/style.css
+++ b/ASSETS/style.css
@@ -339,17 +339,6 @@ h3 {
     color: #F9FFF6;
 }
 
-.footer-main-right {
-    position: static;
-    bottom: 0;
-    width: 100%;
-    text-align: right;
-    margin: 0;
-    padding: 3rem;
-    padding-right: 5rem;
-    color: #F9FFF6;
-}
-
 #footer-style {
     display: flex;
     justify-content: space-evenly;
@@ -364,7 +353,7 @@ h3 {
 }
 
 /* a {
-    color: #FCFF6C;
+    cursor: pointer;
 } */
 
 a:hover {
@@ -423,6 +412,47 @@ a:link {
 #cv {
     width: 10000;
     height: 10000;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    position: relative;
+    padding: 2rem;
+    padding-top: 0;
+}
+
+/* Modal Content */
+.modal-content {
+    padding: 0rem;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.close,
+.close2 {
+    padding: 0;
+    margin: 0;
+    font-size: 1.5rem;
+}
+
+.close:hover,
+.close:focus,
+.close2:hover,
+.close2:focus {
+    text-decoration: none;
+    cursor: pointer;
+    color: #ff9718;
+    transition: 0.3s ease;
+}
+
+button {
+    cursor: pointer;
 }
 
 @media screen and (max-width:940px) {
