--- a/ASSETS/style.css
+++ b/ASSETS/style.css
@@ -198,8 +198,9 @@ canvas {
 }
 
 #cv {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    z-index: 9;
 }
 
 /* Side page with information about the project */
@@ -240,7 +241,7 @@ canvas {
 
 #arrow {
     font-family: 'Saltburn Extra Bold', Helvetica, Arial, sans-serif;
-    font-size: 7rem;
+    font-size: 9rem;
     line-height: .9;
     margin: 0;
     padding: 0;
@@ -255,7 +256,7 @@ canvas {
 
 #arrow-left {
     font-family: 'Saltburn Extra Bold', Helvetica, Arial, sans-serif;
-    font-size: 7rem;
+    font-size: 9rem;
     padding: 0.8rem;
     line-height: 1.125;
     z-index: 10;
@@ -265,7 +266,7 @@ canvas {
 
 #arrow-left-2 {
     font-family: 'Saltburn Extra Bold', Helvetica, Arial, sans-serif;
-    font-size: 7rem;
+    font-size: 9rem;
     line-height: 1;
     z-index: 10;
     margin: 0;
