--- a/ASSETS/style.css
+++ b/ASSETS/style.css
@@ -511,7 +511,7 @@ button {
     cursor: pointer;
 }
 
-@media screen and (max-width:940px) {
+@media screen and (max-width:1000px) {
     #cv {
         width: 100%;
         height: 100%;
@@ -611,6 +611,7 @@ button {
 
     .sheet-wrapper {
         padding: 2rem;
+        padding-top: 0;
     }
 
     .sheet-title {
@@ -633,6 +634,18 @@ button {
         font-size: 5rem;
         line-height: .9;
     }
+
+    .short {
+        display: none;
+    }
+
+    .shorter {
+        display: none;
+    }
+
+    .shortest {
+        display: none;
+    }
 }
 
 @media screen and (max-width:375px) {
@@ -653,5 +666,17 @@ button {
 
     .x {
         font-size: 4rem;
+    }
+
+    .short {
+        display: none;
+    }
+
+    .shorter {
+        display: none;
+    }
+
+    .shortest {
+        display: none;
     }
 }
