--- a/ASSETS/style.css
+++ b/ASSETS/style.css
@@ -511,7 +511,7 @@ button {
     cursor: pointer;
 }
 
-@media screen and (max-width:1000px) {
+@media screen and (max-width:1030px) {
     #cv {
         width: 100%;
         height: 100%;
@@ -519,16 +519,25 @@ button {
 
     .short {
         padding: 0;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
     }
 
     .shorter {
         padding: 0;
     }
 
+    .shortest {
+        padding: 0;
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+
     .subhead {
         flex-direction: column;
         justify-items: center;
         text-align: center;
+        padding-bottom: 0;
     }
 
     .spacing-small {
@@ -544,7 +553,8 @@ button {
         text-align: center;
     }
 
-    .specifics {
+    .terms,
+    .description {
         display: none;
     }
 
@@ -639,16 +649,24 @@ button {
         cursor: pointer;
     }
 
-    .short {
-        display: none;
+    .side-title {
+        font-size: 2rem;
     }
 
-    .shorter {
-        display: none;
+    .side-title {
+        padding-bottom: 0;
+    }
+}
+
+@media screen and (max-width:550px) {
+    .sheet-title {
+        font-size: 2rem;
+        padding-bottom: 0;
+        text-align: center;
     }
 
-    .shortest {
-        display: none;
+    .side-title {
+        padding-bottom: 0;
     }
 }
 
@@ -658,14 +676,14 @@ button {
         margin: 0;
     }
 
-    .site-description {
-        padding: 1.5rem;
+    .side-title {
+        font-size: 1.5rem;
+        padding-bottom: 0;
+        margin-top: 2rem;
     }
 
-    .sheet-title {
-        font-size: 2rem;
-        padding-bottom: 0;
-        text-align: center;
+    h2 {
+        font-size: 1.5rem;
     }
 
     .x {
@@ -673,14 +691,22 @@ button {
     }
 
     .short {
-        display: none;
+        padding: 0;
     }
 
     .shorter {
-        display: none;
+        padding: 0;
     }
 
     .shortest {
-        display: none;
+        padding: 0;
+    }
+
+    .specifics {
+        padding: 0;
+    }
+
+    .bold {
+        font-size: 1.5rem;
     }
 }
