--- a/ASSETS/style.css
+++ b/ASSETS/style.css
@@ -40,14 +40,17 @@
     font-style: normal;
 }
 
+* {
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 html {
     width: 100%;
     height: 100%;
     padding: 2rem;
     overflow-x: hidden;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
 }
 
 body {
