--- a/ASSETS/style.css
+++ b/ASSETS/style.css
@@ -46,6 +46,14 @@
     user-select: none;
 }
 
+::-moz-selection {
+    background: transparent;
+}
+
+::selection {
+    background: transparent;
+}
+
 html {
     width: 100%;
     height: 100%;
