--- a/ASSETS/style.css
+++ b/ASSETS/style.css
@@ -46,10 +46,6 @@
 	user-select: none;
 }
 
-::-moz-selection {
-	background: transparent;
-}
-
 ::selection {
 	background: transparent;
 }
@@ -59,6 +55,14 @@ html {
 	height: 100%;
 	padding: 2rem;
 	overflow-x: hidden;
+	scrollbar-width: none; /* Firefox */
+	overflow: scroll;
+	overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+	width: 0; /* Remove scrollbar space */
+	background: transparent; /* Optional: just make scrollbar invisible */
 }
 
 body {
